fix repo url lol

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitgud.io/Seikatsu/Merchant"
+    "url": "https://github.com/Seikatsu/Merchant"
   },
   "author": "Seikatsu",
   "license": "MIT",
