--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.7.1",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "request": "^2.88.2"
   }
 }
