--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Seikatsu",
   "license": "MIT",
   "dependencies": {
+    "ascii-table3": "^0.8.0",
     "discord.js": "^14.7.1",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
